fixed EmptyStatement mutation without suppressions